--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,88 +1,21 @@
-/* Contact Section */
+.myContactContainer {
+  width: 60vw;
+  background: #0000004f;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #fff;
+/*   margin-top: -91px;
+ */}
+
 #contact {
-    background-color: #f4f4f4;
-    border-radius: 8px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    padding: 40px 20px;
-    text-align: center;
-    max-width: 600px;
-    margin: 50px auto;
-  }
-  
-  /* Title */
-  #contact .MuiTypography-root {
-    font-size: 2rem;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 30px;
-    text-transform: uppercase;
-  }
-  
-  /* Form Inputs */
-  .MuiTextField-root {
-    width: 100%;
-    margin-bottom: 20px;
-    border-radius: 10px;
-  }
-  
-  /* Input Focus Style */
-  .MuiInputBase-root.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-    border-color: #FF6F61;
-  }
-  
-  /* Text Field Style */
-  .MuiOutlinedInput-root {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    transition: all 0.3s ease;
-    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
-  }
-  
-  /* Button Styling */
-  .MuiButton-root {
-    background-color: #FF6F61;
-    color: white;
-    padding: 12px 30px;
-    border-radius: 30px;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition: background-color 0.3s ease;
-    margin-top: 20px;
-    width: 100%;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-  }
-  
-  .MuiButton-root:hover {
-    background-color: #FF8A7B;
-  }
-  
-  /* Button Hover Effect */
-  .MuiButton-root:active {
-    background-color: #FF6F61;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Form container hover effect */
-  form:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-    transition: all 0.3s ease;
-  }
-  
-  /* Mobile responsiveness */
-  @media screen and (max-width: 768px) {
-    #contact .MuiTypography-root {
-      font-size: 1.6rem;
-    }
-  
-    .MuiTextField-root {
-      margin-bottom: 15px;
-    }
-  
-    .MuiButton-root {
-      font-size: 1rem;
-      padding: 12px;
-    }
-  }
-  
+  display: flex;
+  align-items: center;
+  padding: 7rem 3rem 7rem 3rem;
+}
