--- a/src/styles/MyEducation.css
+++ b/src/styles/MyEducation.css
@@ -2,13 +2,16 @@
   padding: 2rem 0;
 }
 
+
 .education-card {
   margin-bottom: 2rem;
   padding: 2rem;
   border-radius: 12px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  background: linear-gradient(135deg, #1f4037, #99f2c8); /* Gradient */
+  background: linear-gradient(135deg, #1f4037, #99f2c8);
+  /* Gradient */
   color: white;
+
 }
 
 .section-title {
@@ -17,11 +20,70 @@
   margin-bottom: 2rem;
   font-family: 'Poppins', sans-serif;
 }
-  
 
-.css-1x77y66{
+
+
+.css-1x77y66 {
   background-color: #0a2f22 !important;
 }
-.css-v1pkve{
+
+.css-v1pkve {
   background-color: #0d2029 !important;
+}
+
+.CourseContainer {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+
+
+
+.CourseContainer {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+
+.CourseContainer:before {
+  pointer-events: none;
+  position: absolute;
+  z-index: -1;
+  content: '';
+  top: 100%;
+  left: 5%;
+  height: 10px;
+  width: 90%;
+  opacity: 0;
+  background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+  /* W3C */
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform, opacity;
+  transition-property: transform, opacity;
+}
+
+.CourseContainer:hover,
+.CourseContainer:focus,
+.CourseContainer:active {
+  -webkit-transform: translateY(-5px);
+  transform: translateY(-5px);
+  /* move the element up by 5px */
+}
+
+.CourseContainer:hover:before,
+.CourseContainer:focus:before,
+.CourseContainer:active:before {
+  opacity: 1;
+  -webkit-transform: translateY(5px);
+  transform: translateY(5px);
+  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
 }
